# nat20-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
core/: Cargo.toml
engine/: Cargo.toml
engine/examples/: combat_cli_demo.rs  level_up_cli_demo.rs
engine/src/: components.rs  creature.rs  engine.rs  entities.rs  lib.rs  macros.rs  main.rs  registry.rs  scripts.rs  systems.rs  todo.txt
engine/src/actions/: targeting.rs
engine/src/combat/: damage.rs
engine/src/components/: ability.rs  actions.rs  ai.rs  background.rs  class.rs  d20.rs  d20_check.rs  damage.rs  dice.rs  effects.rs  faction.rs  feat.rs  hit_points.rs  id.rs  items.rs  level.rs  level_up.rs  modifier.rs  proficiency.rs  race.rs  resource.rs  saving_throw.rs  skill.rs  speed.rs  spells.rs
engine/src/components/actions/: action.rs  targeting.rs
engine/src/components/effects/: effect.rs  effects.rs  hooks.rs
engine/src/components/health/: hit_points.rs  life_state.rs
engine/src/components/items/: equipment.rs  inventory.rs  item.rs  money.rs
engine/src/components/items/equipment/: armor.rs  equipment.rs  loadout.rs  slots.rs  weapon.rs
engine/src/components/spells/: spell.rs  spellbook.rs
engine/src/creature/: character.rs
engine/src/effects/: effects.rs  hooks.rs
engine/src/engine/: encounter.rs  event.rs  game_state.rs  geometry.rs  interaction.rs  time.rs  world.rs
engine/src/entities/: character.rs  character_ecs_wip.rs  monster.rs
engine/src/items/equipment/: armor.rs  equipment.rs  loadout.rs  weapon.rs
engine/src/registry/: actions.rs  ai.rs  backgrounds.rs  classes.rs  effects.rs  factions.rs  feats.rs  items.rs  races.rs  registry.rs  registry_validation.rs  resources.rs  serialize.rs  spells.rs
engine/src/registry/serialize/: action.rs  attack_roll.rs  class.rs  d20.rs  damage.rs  dice.rs  effect.rs  modifier.rs  parser.rs  quantity.rs  saving_throw.rs  species.rs  spell.rs  targeting.rs  variables.rs
engine/src/resources/: resources.rs
engine/src/scripts/: script.rs  script_api.rs  script_engine.rs
engine/src/scripts/rhai/: rhai_engine.rs  rhai_types.rs
engine/src/spells/: spellbook.rs
engine/src/stats/: ability.rs  proficiency.rs  saving_throw.rs  skill.rs
engine/src/systems/: actions.rs  ai.rs  backgrounds.rs  class.rs  combat.rs  d20.rs  d20_check.rs  damage.rs  effects.rs  factions.rs  feats.rs  geometry.rs  health.rs  helpers.rs  inventory.rs  level_up.rs  loadout.rs  movement.rs  race.rs  resources.rs  scripts.rs  species.rs  spells.rs  time.rs  turns.rs
engine/src/test_utils/: cli.rs  fixtures.rs
engine/tests/: character_armor.rs  character_class.rs  character_d20_check.rs  character_equipment_effects.rs  character_saving_throw.rs  character_skill.rs  character_weapon.rs  class_fighter.rs  engine.rs
examples/: combat_cli_demo.rs  (+1 more)
gui/: Cargo.toml
gui/shaders/: cube.frag  cube.vert
gui/src/: cube.rs  main.rs  render.rs  state.rs  windows.rs
gui/src/render/: components.rs  engine.rs  entities.rs  imgui_render.rs  inventory.rs  text.rs  ui.rs  utils.rs  world.rs
gui/src/render/common/: utils.rs
gui/src/render/ui/: components.rs  engine.rs  entities.rs  inventory.rs  text.rs  utils.rs
gui/src/render/world/: camera.rs  frame.rs  grid.rs  line.rs  mesh.rs  program.rs  shapes.rs  world_renderer.rs
gui/src/render/world/shaders/: basic.frag  basic.vert  grid.frag  grid.vert  line.frag  line.vert
gui/src/state/: character_creation.rs  character_debug.rs  encounter.rs  gui.rs  gui_state.rs  parameters.rs  settings.rs
gui/src/utils/: mod.rs
gui/src/windows/: action_bar.rs  anchor.rs  creature_debug.rs  creature_right_click.rs  encounter.rs  level_up.rs  line_of_sight_debug.rs  main_menu.rs  navigation_debug.rs  reactions.rs  spawn_predefined.rs
(+274 files in other folders)
