[package]
name = "nat20_rs" # the name of the package
version = "0.1.0"    # the current version, obeying semver

[dependencies]
enum-iterator = "2.1.0"
rand = "0.9.1"
rstest = "0.25.0"
strum = { version = "0.27.1", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4"] }

[lib]
name = "nat20_rs"
path = "src/lib.rs"
