[package]
name = "nat20_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
enum-iterator = "2.1.0"
hecs = { version = "0.10.5", features = ["std", "macros", "serde"] }
rand = "0.9.1"
rstest = "0.25.0"
strum = { version = "0.27.1", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4"] }
paste = "1"
parry3d = "0.24"
obj-rs = "0.7.4"
# rerecast = "0.2.0"
rerecast = "0.1.1"
# glam = "0.30.8"
glam = "0.29.3"
polyanya = "0.14.0"
uom = "0.37.0"
num-traits = "0.2.19"

[lib]
name = "nat20_rs"
path = "src/lib.rs"
