[package]
name = "nat20_gui"
version = "0.1.0"
edition = "2024"

[dependencies]
imgui = { version = "0.12.0", git = "https://github.com/imgui-rs/imgui-rs", features = ["tables-api"]}
glow = "0.14"
memoffset = "0.9"
imgui-glow-renderer = { version = "0.13.0", git = "https://github.com/imgui-rs/imgui-glow-renderer" }
glutin = "0.32"
glutin-winit = "0.5"
imgui-winit-support = { version = "0.13.0", git = "https://github.com/imgui-rs/imgui-winit-support" }
image = "0.23"
raw-window-handle = "0.6.0"
winit = { version = "0.30", features = ["rwh_06"] }
nat20_rs = { path = "../engine" }
strum = { version = "0.27.1", features = ["derive"] }
bytemuck = { version = "1", features = ["derive"] }
hecs = { version = "0.10.5", features = ["std", "macros", "serde"] }
glam = "0.30.8"
parry3d = "0.24"
obj-rs = "0.7.4"
rerecast = "0.2.0"
# rerecast = "0.1.1"
uom = "0.37.0"
serde = "1.0.228"
serde_json = "1.0.145"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "time", "env-filter"] }
chrono = "0.4.42"
